--- a/pusat/laporan/index.html
+++ b/pusat/laporan/index.html
@@ -268,11 +268,13 @@
                         </svg>
                         <span class="flex-1 ms-3 whitespace-nowrap">Rekapitulasi SDM</span>
                     </a>
-                </li>                <li>
+                </li>
+                <li>
                     <a href="../notifikasi/index.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
-                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                            viewBox="0 0 24 24">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M12 5.365V3m0 2.365a5.338 5.338 0 0 1 5.133 5.368v1.8c0 2.386 1.867 2.982 1.867 4.175 0 .593 0 1.292-.538 1.292H5.538C5 18 5 17.301 5 16.708c0-1.193 1.867-1.789 1.867-4.175v-1.8A5.338 5.338 0 0 1 12 5.365ZM8.733 18c.094.852.306 1.54.944 2.112a3.48 3.48 0 0 0 4.646 0c.638-.572 1.236-1.26 1.33-2.112h-6.92Z" />
                         </svg>
@@ -325,36 +327,6 @@
                     </li>
                 </ol>
             </nav>
-
-            <!-- Bar Chart: Masa Aktif RTK per Provinsi -->
-            <div class="bg-white rounded-lg p-4 md:p-6 shadow-sm mb-4 md:mb-6">
-                <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 mb-4 md:mb-6">
-                    <h2 class="text-lg md:text-xl font-bold text-gray-900">Masa Aktif RTK per Provinsi</h2>
-                    <div class="text-sm text-gray-600">
-                        <span class="font-medium">Tahun Sekarang:</span> 2025
-                        <span class="mx-2">|</span>
-                        <span class="font-medium">Masa Berlaku:</span> 5 Tahun
-                    </div>
-                </div>
-                <div class="h-96">
-                    <canvas id="rtkValidityBarChart"></canvas>
-                </div>
-            </div>
-
-            <!-- RTK Validity Status Pie Chart -->
-            <div class="flex justify-center">
-                <div class="bg-white rounded-lg p-4 md:p-6 shadow-sm w-full lg:w-2/3">
-                    <h2 class="text-lg md:text-xl font-bold text-gray-900 mb-3 md:mb-4 text-center">Status Masa Berlaku
-                        RTK Provinsi (2025)
-                    </h2>
-                    <p class="text-sm text-gray-600 mb-4 md:mb-6 text-center">
-                        RTK yang sudah tidak berlaku <span class="font-semibold text-red-600">harus segera diurus</span>
-                    </p>
-                    <div class="h-96 flex items-center justify-center">
-                        <canvas id="rtkStatusPieChart"></canvas>
-                    </div>
-                </div>
-            </div>
 
             <!-- Data Table Section from list.html -->
             <div id="table-section" class="bg-white rounded-lg shadow-sm p-4 md:p-6 mt-6">
@@ -477,229 +449,8 @@
             arrow?.classList.toggle('rotate-180');
         });
 
-        // RTK Validity Data for 38 Provinces
-        // Current year is 2025, RTK validity is 5 years
-        // If expiry year < 2025, it's expired and needs renewal
-        const provinceLabels = ['Aceh', 'Sumut', 'Sumsel', 'Sumbar', 'Bengkulu', 'Riau', 'Kep. Riau', 'Jambi', 'Lampung', 'Babel',
-            'Kalbar', 'Kaltim', 'Kalsel', 'Kalteng', 'Kaltara', 'Banten', 'DKI Jakarta', 'Jabar', 'Jateng', 'DIY',
-            'Jatim', 'Bali', 'NTT', 'NTB', 'Gorontalo', 'Sulbar', 'Sulteng', 'Sulut', 'Sultra', 'Sulsel',
-            'Malut', 'Maluku', 'Papua Barat', 'Papua', 'Papua Tengah', 'Papua Pegunungan', 'Papua Selatan', 'Papua Barat Daya'];
-
-        // Year when RTK expires for each province (some expired, some still valid)
-        const rtkExpiryYears = [
-            2023, 2026, 2025, 2027, 2022, 2026, 2024, 2025, 2027, 2023,
-            2026, 2028, 2025, 2024, 2023, 2027, 2028, 2029, 2027, 2026,
-            2028, 2027, 2024, 2026, 2023, 2024, 2025, 2027, 2025, 2028,
-            2023, 2024, 2022, 2023, 2022, 2023, 2024, 2023
-        ];
-
-        // Calculate valid vs expired
-        let validCount = 0;
-        let expiredCount = 0;
+        // Current year for RTK validity check
         const currentYear = 2025;
-
-        rtkExpiryYears.forEach(year => {
-            if (year >= currentYear) {
-                validCount++;
-            } else {
-                expiredCount++;
-            }
-        });
-
-        // Create 3-color alternating pattern for bar chart (Blue-Red-Green)
-        const colors = [
-            { bg: 'rgba(59, 130, 246, 0.8)', border: 'rgba(59, 130, 246, 1)' },   // Blue
-            { bg: 'rgba(239, 68, 68, 0.8)', border: 'rgba(239, 68, 68, 1)' },     // Red
-            { bg: 'rgba(34, 197, 94, 0.8)', border: 'rgba(34, 197, 94, 1)' }      // Green
-        ];
-
-        const backgroundColors = rtkExpiryYears.map((year, index) => colors[index % 3].bg);
-        const borderColors = rtkExpiryYears.map((year, index) => colors[index % 3].border);
-
-        // Bar Chart: RTK Validity Period per Province
-        const barCtx = document.getElementById('rtkValidityBarChart').getContext('2d');
-        const rtkValidityBarChart = new Chart(barCtx, {
-            type: 'bar',
-            data: {
-                labels: provinceLabels,
-                datasets: [{
-                    label: 'Tahun Berlaku (Kadaluarsa)',
-                    data: rtkExpiryYears,
-                    backgroundColor: backgroundColors,
-                    borderColor: borderColors,
-                    borderWidth: 1,
-                    borderRadius: 6
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                plugins: {
-                    legend: {
-                        display: true,
-                        position: 'top',
-                        labels: {
-                            font: {
-                                size: 13,
-                                weight: '500'
-                            },
-                            generateLabels: function () {
-                                return [
-                                    {
-                                        text: 'Masih Berlaku (≥ 2025)',
-                                        fillStyle: 'rgba(16, 185, 129, 0.8)',
-                                        strokeStyle: 'rgba(16, 185, 129, 1)',
-                                        lineWidth: 1
-                                    },
-                                    {
-                                        text: 'Sudah Tidak Berlaku (< 2025)',
-                                        fillStyle: 'rgba(239, 68, 68, 0.8)',
-                                        strokeStyle: 'rgba(239, 68, 68, 1)',
-                                        lineWidth: 1
-                                    }
-                                ];
-                            }
-                        }
-                    },
-                    tooltip: {
-                        backgroundColor: 'rgba(31, 41, 55, 0.95)',
-                        padding: 12,
-                        cornerRadius: 8,
-                        titleFont: {
-                            size: 14,
-                            weight: 'bold'
-                        },
-                        bodyFont: {
-                            size: 13
-                        },
-                        callbacks: {
-                            label: function (context) {
-                                const year = context.parsed.y;
-                                const status = year >= currentYear ? 'Masih Berlaku' : 'Sudah Tidak Berlaku';
-                                return `Berlaku sampai: ${year} (${status})`;
-                            }
-                        }
-                    }
-                },
-                scales: {
-                    y: {
-                        beginAtZero: false,
-                        min: 2020,
-                        max: 2030,
-                        ticks: {
-                            font: {
-                                size: 12
-                            },
-                            stepSize: 1,
-                            callback: function (value) {
-                                return value; // Display year as-is without formatting
-                            }
-                        },
-                        grid: {
-                            color: 'rgba(229, 231, 235, 0.8)'
-                        },
-                        title: {
-                            display: true,
-                            text: 'Tahun Berlaku',
-                            font: {
-                                size: 13,
-                                weight: 'bold'
-                            }
-                        }
-                    },
-                    x: {
-                        ticks: {
-                            font: {
-                                size: 10
-                            },
-                            maxRotation: 45,
-                            minRotation: 45
-                        },
-                        grid: {
-                            display: false
-                        },
-                        title: {
-                            display: true,
-                            text: 'Provinsi',
-                            font: {
-                                size: 13,
-                                weight: 'bold'
-                            }
-                        }
-                    }
-                }
-            }
-        });
-
-        // Pie Chart: RTK Validity Status
-        const pieCtx = document.getElementById('rtkStatusPieChart').getContext('2d');
-        const rtkStatusPieChart = new Chart(pieCtx, {
-            type: 'pie',
-            data: {
-                labels: ['Masih Berlaku', 'Sudah Tidak Berlaku (Perlu Diurus)'],
-                datasets: [{
-                    data: [validCount, expiredCount],
-                    backgroundColor: [
-                        'rgba(16, 185, 129, 0.8)',
-                        'rgba(239, 68, 68, 0.8)'
-                    ],
-                    borderColor: [
-                        'rgba(16, 185, 129, 1)',
-                        'rgba(239, 68, 68, 1)'
-                    ],
-                    borderWidth: 2,
-                    hoverOffset: 15
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                plugins: {
-                    legend: {
-                        position: 'bottom',
-                        labels: {
-                            padding: 20,
-                            font: {
-                                size: 14,
-                                weight: '600'
-                            },
-                            generateLabels: function (chart) {
-                                const data = chart.data;
-                                return data.labels.map((label, i) => ({
-                                    text: `${label}: ${data.datasets[0].data[i]} provinsi`,
-                                    fillStyle: data.datasets[0].backgroundColor[i],
-                                    strokeStyle: data.datasets[0].borderColor[i],
-                                    lineWidth: 2,
-                                    hidden: false,
-                                    index: i
-                                }));
-                            }
-                        }
-                    },
-                    tooltip: {
-                        backgroundColor: 'rgba(31, 41, 55, 0.95)',
-                        padding: 15,
-                        cornerRadius: 8,
-                        titleFont: {
-                            size: 15,
-                            weight: 'bold'
-                        },
-                        bodyFont: {
-                            size: 14
-                        },
-                        callbacks: {
-                            label: function (context) {
-                                const label = context.label || '';
-                                const value = context.parsed || 0;
-                                const total = context.dataset.data.reduce((a, b) => a + b, 0);
-                                const percentage = ((value / total) * 100).toFixed(1);
-                                return `${label}: ${value} provinsi (${percentage}%)`;
-                            }
-                        }
-                    }
-                }
-            }
-        });
 
         // RTK Data for 38 Provinces (for Table)
         const provinceData = [
@@ -776,8 +527,8 @@
         $(document).ready(function () {
             $('#rtkTable').DataTable({
                 data: tableData,
-                    scrollX: true,
-                    autoWidth: false,
+                scrollX: true,
+                autoWidth: false,
                 dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',
                 buttons: [
                     {
@@ -828,19 +579,19 @@
                 ]
             });
 
-        // Sync scroll between header and body
-        const scrollBody = document.querySelector('.dataTables_scrollBody');
-        const scrollHead = document.querySelector('.dataTables_scrollHead');
-        
-        if (scrollBody && scrollHead) {
-            scrollBody.addEventListener('scroll', function() {
-                scrollHead.scrollLeft = scrollBody.scrollLeft;
-            });
-            
-            scrollHead.addEventListener('scroll', function() {
-                scrollBody.scrollLeft = scrollHead.scrollLeft;
-            });
-        }
+            // Sync scroll between header and body
+            const scrollBody = document.querySelector('.dataTables_scrollBody');
+            const scrollHead = document.querySelector('.dataTables_scrollHead');
+
+            if (scrollBody && scrollHead) {
+                scrollBody.addEventListener('scroll', function () {
+                    scrollHead.scrollLeft = scrollBody.scrollLeft;
+                });
+
+                scrollHead.addEventListener('scroll', function () {
+                    scrollBody.scrollLeft = scrollHead.scrollLeft;
+                });
+            }
         });
 
         // View RTK function - shows PDF in modal
