--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -189,9 +189,11 @@
             <!-- Bar Chart: SDM per Kab/Kota -->
             <div class="bg-white rounded-lg p-3 sm:p-6 shadow-sm mb-4 sm:mb-6">
                 <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-2 sm:gap-0 mb-4 sm:mb-6">
-                    <h2 class="text-base sm:text-xl font-bold text-gray-900">Jumlah SDM yang Mengambil Kursus per Kabupaten/Kota</h2>
+                    <h2 class="text-base sm:text-xl font-bold text-gray-900">Jumlah SDM yang Mengambil Kursus per
+                        Kabupaten/Kota</h2>
                     <div class="flex items-center gap-2">
-                        <label for="yearFilter" class="hidden sm:inline text-sm font-medium text-gray-700">Tahun:</label>
+                        <label for="yearFilter"
+                            class="hidden sm:inline text-sm font-medium text-gray-700">Tahun:</label>
                         <select id="yearFilter"
                             class="px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
                             <option value="2025" selected>2025</option>
@@ -206,11 +208,42 @@
                 </div>
             </div>
 
+            <!-- Bar Chart: Masa Aktif RTK per Kab/Kota -->
+            <div class="bg-white rounded-lg p-4 md:p-6 shadow-sm mb-4 md:mb-6">
+                <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 mb-4 md:mb-6">
+                    <h2 class="text-lg md:text-xl font-bold text-gray-900">Masa Aktif RTK per Kab/Kota</h2>
+                    <div class="text-sm text-gray-600">
+                        <span class="font-medium">Tahun Sekarang:</span> 2025
+                        <span class="mx-2">|</span>
+                        <span class="font-medium">Masa Berlaku:</span> 5 Tahun
+                    </div>
+                </div>
+                <div class="h-96">
+                    <canvas id="rtkValidityBarChart"></canvas>
+                </div>
+            </div>
+
+            <!-- RTK Validity Status Pie Chart -->
+            <div class="flex justify-center mb-4 sm:mb-6">
+                <div class="bg-white rounded-lg p-4 md:p-6 shadow-sm w-full lg:w-2/3">
+                    <h2 class="text-lg md:text-xl font-bold text-gray-900 mb-3 md:mb-4 text-center">Status Masa Berlaku
+                        RTK Kab/Kota (2025)
+                    </h2>
+                    <p class="text-sm text-gray-600 mb-4 md:mb-6 text-center">
+                        RTK yang sudah tidak berlaku <span class="font-semibold text-red-600">harus segera diurus</span>
+                    </p>
+                    <div class="h-96 flex items-center justify-center">
+                        <canvas id="rtkStatusPieChart"></canvas>
+                    </div>
+                </div>
+            </div>
+
             <!-- Pie Charts Grid -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 sm:gap-6">
                 <!-- Left Card: Gender Distribution Pie Chart -->
                 <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
-                    <h2 class="text-base sm:text-xl font-bold text-gray-900 mb-4 sm:mb-6">Perbandingan Jenis Kelamin</h2>
+                    <h2 class="text-base sm:text-xl font-bold text-gray-900 mb-4 sm:mb-6">Perbandingan Jenis Kelamin
+                    </h2>
                     <div class="h-60 sm:h-80 flex items-center justify-center">
                         <canvas id="genderPieChart"></canvas>
                     </div>
@@ -218,7 +251,8 @@
 
                 <!-- Right Card: Module Distribution Pie Chart -->
                 <div class="bg-white rounded-lg p-4 sm:p-6 shadow-sm">
-                    <h2 class="text-base sm:text-xl font-bold text-gray-900 mb-4 sm:mb-6">Perbandingan Modul yang Diambil</h2>
+                    <h2 class="text-base sm:text-xl font-bold text-gray-900 mb-4 sm:mb-6">Perbandingan Modul yang
+                        Diambil</h2>
                     <div class="h-60 sm:h-80 flex items-center justify-center">
                         <canvas id="modulePieChart"></canvas>
                     </div>
@@ -521,6 +555,216 @@
                                 const total = context.dataset.data.reduce((a, b) => a + b, 0);
                                 const percentage = ((value / total) * 100).toFixed(1);
                                 return `${label}: ${value} (${percentage}%)`;
+                            }
+                        }
+                    }
+                }
+            }
+        });
+
+        // RTK Validity Data for Jakarta Kab/Kota
+        const kabkotaLabelsRTK = ['Jakarta Pusat', 'Jakarta Barat', 'Jakarta Selatan', 'Jakarta Timur', 'Jakarta Utara', 'Kep. Seribu'];
+
+        const rtkExpiryYears = [
+            2027, 2028, 2026, 2029, 2027, 2025
+        ];
+
+        let validCountRTK = 0;
+        let expiredCountRTK = 0;
+        const currentYearRTK = 2025;
+
+        rtkExpiryYears.forEach(year => {
+            if (year >= currentYearRTK) {
+                validCountRTK++;
+            } else {
+                expiredCountRTK++;
+            }
+        });
+
+        const colorsRTK = [
+            { bg: 'rgba(59, 130, 246, 0.8)', border: 'rgba(59, 130, 246, 1)' },
+            { bg: 'rgba(239, 68, 68, 0.8)', border: 'rgba(239, 68, 68, 1)' },
+            { bg: 'rgba(34, 197, 94, 0.8)', border: 'rgba(34, 197, 94, 1)' }
+        ];
+
+        const backgroundColorsRTK = rtkExpiryYears.map((year, index) => colorsRTK[index % 3].bg);
+        const borderColorsRTK = rtkExpiryYears.map((year, index) => colorsRTK[index % 3].border);
+
+        // Bar Chart: RTK Validity Period per Kab/Kota
+        const barCtxRTK = document.getElementById('rtkValidityBarChart').getContext('2d');
+        const rtkValidityBarChart = new Chart(barCtxRTK, {
+            type: 'bar',
+            data: {
+                labels: kabkotaLabelsRTK,
+                datasets: [{
+                    label: 'Tahun Berlaku (Kadaluarsa)',
+                    data: rtkExpiryYears,
+                    backgroundColor: backgroundColorsRTK,
+                    borderColor: borderColorsRTK,
+                    borderWidth: 1,
+                    borderRadius: 6
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: {
+                        display: true,
+                        position: 'top',
+                        labels: {
+                            font: {
+                                size: 13,
+                                weight: '500'
+                            },
+                            generateLabels: function () {
+                                return [
+                                    {
+                                        text: 'Masih Berlaku (≥ 2025)',
+                                        fillStyle: 'rgba(16, 185, 129, 0.8)',
+                                        strokeStyle: 'rgba(16, 185, 129, 1)',
+                                        lineWidth: 1
+                                    },
+                                    {
+                                        text: 'Sudah Tidak Berlaku (< 2025)',
+                                        fillStyle: 'rgba(239, 68, 68, 0.8)',
+                                        strokeStyle: 'rgba(239, 68, 68, 1)',
+                                        lineWidth: 1
+                                    }
+                                ];
+                            }
+                        }
+                    },
+                    tooltip: {
+                        backgroundColor: 'rgba(31, 41, 55, 0.95)',
+                        padding: 12,
+                        cornerRadius: 8,
+                        titleFont: {
+                            size: 14,
+                            weight: 'bold'
+                        },
+                        bodyFont: {
+                            size: 13
+                        },
+                        callbacks: {
+                            label: function (context) {
+                                const year = context.parsed.y;
+                                const status = year >= currentYearRTK ? 'Masih Berlaku' : 'Sudah Tidak Berlaku';
+                                return `Berlaku sampai: ${year} (${status})`;
+                            }
+                        }
+                    }
+                },
+                scales: {
+                    y: {
+                        beginAtZero: false,
+                        min: 2020,
+                        max: 2030,
+                        ticks: {
+                            font: {
+                                size: 12
+                            },
+                            stepSize: 1
+                        },
+                        grid: {
+                            color: 'rgba(229, 231, 235, 0.8)'
+                        },
+                        title: {
+                            display: true,
+                            text: 'Tahun Berlaku',
+                            font: {
+                                size: 13,
+                                weight: 'bold'
+                            }
+                        }
+                    },
+                    x: {
+                        ticks: {
+                            font: {
+                                size: 10
+                            },
+                            maxRotation: 45,
+                            minRotation: 45
+                        },
+                        grid: {
+                            display: false
+                        },
+                        title: {
+                            display: true,
+                            text: 'Kab/Kota',
+                            font: {
+                                size: 13,
+                                weight: 'bold'
+                            }
+                        }
+                    }
+                }
+            }
+        });
+
+        // Pie Chart: RTK Validity Status
+        const pieCtxRTK = document.getElementById('rtkStatusPieChart').getContext('2d');
+        const rtkStatusPieChart = new Chart(pieCtxRTK, {
+            type: 'pie',
+            data: {
+                labels: ['Masih Berlaku', 'Sudah Tidak Berlaku (Perlu Diurus)'],
+                datasets: [{
+                    data: [validCountRTK, expiredCountRTK],
+                    backgroundColor: [
+                        'rgba(16, 185, 129, 0.8)',
+                        'rgba(239, 68, 68, 0.8)'
+                    ],
+                    borderColor: [
+                        'rgba(16, 185, 129, 1)',
+                        'rgba(239, 68, 68, 1)'
+                    ],
+                    borderWidth: 2,
+                    hoverOffset: 15
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: {
+                        position: 'bottom',
+                        labels: {
+                            padding: 20,
+                            font: {
+                                size: 14,
+                                weight: '600'
+                            },
+                            generateLabels: function (chart) {
+                                const data = chart.data;
+                                return data.labels.map((label, i) => ({
+                                    text: `${label}: ${data.datasets[0].data[i]} kab/kota`,
+                                    fillStyle: data.datasets[0].backgroundColor[i],
+                                    strokeStyle: data.datasets[0].borderColor[i],
+                                    lineWidth: 2,
+                                    hidden: false,
+                                    index: i
+                                }));
+                            }
+                        }
+                    },
+                    tooltip: {
+                        backgroundColor: 'rgba(31, 41, 55, 0.95)',
+                        padding: 15,
+                        cornerRadius: 8,
+                        titleFont: {
+                            size: 15,
+                            weight: 'bold'
+                        },
+                        bodyFont: {
+                            size: 14
+                        },
+                        callbacks: {
+                            label: function (context) {
+                                const label = context.label || '';
+                                const value = context.parsed || 0;
+                                const total = context.dataset.data.reduce((a, b) => a + b, 0);
+                                const percentage = ((value / total) * 100).toFixed(1);
+                                return `${label}: ${value} kab/kota (${percentage}%)`;
                             }
                         }
                     }
